--- a/BiblioUi/src/app/app.component.html
+++ b/BiblioUi/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <div class="container">
+  <div class="container headTitle">
     <h1 class="title">
       Hello World
     </h1>
