--- a/BiblioUi/src/app/component/login/login.component.html
+++ b/BiblioUi/src/app/component/login/login.component.html
@@ -1,14 +1,31 @@
-<p>login works!</p>
-<form *ngIf="!logged" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <h3>Login</h3>
-  <label>
-    Mail: <input type="text" formControlName="mail">
-  </label>
-  <label>
-    Password: <input type="password" formControlName="password">
-  </label>
-  <button type="submit">Submit</button>
-</form>
 
-<button *ngIf="logged" (click)="logout()">Logout</button>
+
+<div *ngIf="!isLogged" [formGroup]="loginForm"  class="field is-horizontal">
+  <div class="field-body ">
+    <div class="field ">
+      <p class="control  has-icons-left">
+        <input class="input is-small" type="email" placeholder="Mail" formControlName="mail">
+        <span class="icon is-small is-left">
+          <i class="fa fa-envelope"></i>
+        </span>
+      </p>
+    </div>
+    <div class="field">
+      <p class="control is-expanded has-icons-left">
+        <input class="input is-success is-small" type="password" placeholder="Password" formControlName="password">
+        <span class="icon is-small is-left">
+          <i class="fa fa-envelope"></i>
+        </span>
+      </p>
+    </div>
+  </div>
+  <div class="control">
+    <button type="submit" class="button is-primary is-small" (click)="onSubmit()">
+      Login
+    </button>
+  </div>
+
+</div>
+
+<button class="button is-primary is-small" *ngIf="isLogged" (click)="logout()">Logout</button>
 
