--- a/BiblioUi/src/app/widget/book-selected/book-selected.component.html
+++ b/BiblioUi/src/app/widget/book-selected/book-selected.component.html
@@ -1,4 +1,4 @@
-<button class="button" (click)="goBackToList()">Go back</button>
+<button class="button is-small is-primary" (click)="goBackToList()">Go back</button>
 <h5>{{selectedBook.titre}}</h5>
 <p *ngIf="isLogged">user loggé</p>
 <p *ngIf="!isLogged">user pas loggé</p>
