--- a/BiblioUi/src/app/widget/book-listing/book-listing.component.html
+++ b/BiblioUi/src/app/widget/book-listing/book-listing.component.html
@@ -1,4 +1,5 @@
-<div (click)="select(livre)">
+
+<div (click)="select(livre)" class="livre">
   <h5>{{livre.titre}}</h5>
   <p>{{livre.livreId}}</p>
   <p>{{livre.genre}}</p>
@@ -8,5 +9,5 @@
     <p>{{auteur.prenom}}</p>
 
   </div>
-
 </div>
+
