--- a/BiblioUi/src/app/widget/book-selected/book-selected.component.html
+++ b/BiblioUi/src/app/widget/book-selected/book-selected.component.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 <div *ngIf="isInPanier && isLogged">
-  <p>Ce livre est déjà dans votre panier</p>
+  <p>Votre panier contient déjà un livre</p>
 </div>
 
 <div *ngIf="exemplaireOf && exemplaireOf.length === 0">
