--- a/BiblioUi/src/app/component/profil/profil.component.html
+++ b/BiblioUi/src/app/component/profil/profil.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="tab-content" *ngIf="selectedTab === 2">
-    <p>Vos commandes</p>
+    <app-commande [user]="user"></app-commande>
   </div>
 
   <div class="tab-content" *ngIf="selectedTab === 3">
